--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Ember.js Getting Started",
   "description": "A sample Ember.js app deployed to Heroku",
   "repository": "https://github.com/heroku/ember-js-getting-started",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
+  "logo": "http://ember-js-sample.herokuapp.com/images/node.svg",
   "keywords": ["ember.js", "static"],
   "image": "heroku/emberjs",
   "buildpacks": [
