--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Ember.js Getting Started",
-  "description": "A sample Ember.js app deployed to Heroku",
-  "repository": "https://github.com/heroku/ember-js-getting-started",
-  "logo": "https://heroku-www-files.s3.amazonaws.com/getting-started/ember.svg",
+  "name": "Purple Nurple",
+  "description": "Tracking the US 2016 Presidential Election",
+  "repository": "",
+  "logo": "",
   "keywords": ["ember.js", "static"],
   "buildpacks": [
     { "url": "https://codon-buildpacks.s3.amazonaws.com/buildpacks/heroku/emberjs.tgz" }
