--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-highcharts": "0.4.3",
     "ember-load-initializers": "^0.5.1",
-    "ember-resolver": "^2.0.3",
+    "ember-resolver": "2.0.3",
     "ember-welcome-page": "^1.0.1",
     "highcharts": "4.2.5",
     "loader.js": "^4.0.1"
