--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-js-getting-started",
+  "name": "purple-nurple",
   "dependencies": {
     "ember": "~2.6.0-beta.2",
     "ember-cli-shims": "0.1.1",
