--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-data": "2.5.3",
     "ember-data-fixture-adapter": "1.13.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-flex-grid": "0.0.2",
     "ember-highcharts": "0.4.3",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "2.0.3",
