--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "^2.0.1",
+    "ember-browserify": "^1.1.9",
     "ember-cli": "2.6.0-beta.2",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
@@ -42,6 +43,8 @@
     "ember-resolver": "2.0.3",
     "ember-welcome-page": "^1.0.1",
     "highcharts": "4.2.5",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "pollster": "0.0.3",
+    "request": "^2.72.0"
   }
 }
